Closed Bug 744880 Opened 13 years ago Closed 13 years ago

GC: make Relocatable HeapValue variant that does not trigger post barriers

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

This will be needed for HashTables that store HeapValues.
Blocks: 745325
Blocks: 745326
Attached patch v0Splinter Review
This one is easy, since we already split out EncapsulatedValue.
Attachment #614939 - Flags: review?(wmccloskey)
Attachment #614939 - Flags: review?(wmccloskey) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: