Bug 744880 - Make Relocatable HeapValue for use with manual post barriers; r=billm

We cannot have implicit post barriers run on any pointer that can be relocated
outside of the GC's control. This includes things like HashTables and Vectors.